# restaurant-system

./: README.md
restaurant-system/: CMakeLists.txt  admin.c  admin.h  cashier.c  cashier.h  main.c  menu.c  menu.h  order.c  order.h  user.c  user.h
restaurant-system/data/: menu  orders  users
